--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -174,6 +174,14 @@
         }
     }
 
+    label {
+        span.input-description {
+        }
+
+        span.input-description + input[type="text"] {
+        }
+    }
+
     // different default type of messages in a <strong>
     .info, .note, .error {
         display: block;
