complete rework of the admin layout sorting mechanism, added buy and specimen link UI blocks

--- a/admin/css/admin-settings.less
+++ b/admin/css/admin-settings.less
@@ -2,6 +2,9 @@
 #fontsampler-admin {
     .form-settings label {
         clear: both;
+        display: block;
+        margin: 10px 0;
+
         span.setting-description, .fontsampler-admin-settings-styling small {
             display: inline-block;
             width: 23em;
