--- a/css/fontsampler-custom-rangeslider.less
+++ b/css/fontsampler-custom-rangeslider.less
@@ -28,7 +28,7 @@
 }
 
 .rangeslider__fill {
-  background: #333;
+  //background: #333;
   position: absolute;
 }
 .rangeslider--horizontal .rangeslider__fill {
