--- a/css/fontsampler-custom-selectric.less
+++ b/css/fontsampler-custom-selectric.less
@@ -44,7 +44,7 @@
   text-overflow: ellipsis;
   margin: 0 @innerHeight 0 @indent;
   font-size: inherit;
-  line-height: @innerHeight;
+  line-height: inherit;
   color: @labelColor;
   height: @innerHeight;
   border-bottom: 1px solid #333;
