--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -21,7 +21,6 @@
   opacity: 0.4;
 }
 .rangeslider__fill {
-  background: #333;
   position: absolute;
 }
 .rangeslider--horizontal .rangeslider__fill {
@@ -68,6 +67,8 @@
 }
 #fontsampler-admin .form-settings label {
   clear: both;
+  display: block;
+  margin: 10px 0;
 }
 #fontsampler-admin .form-settings label span.setting-description,
 #fontsampler-admin .form-settings label .fontsampler-admin-settings-styling small {
@@ -129,7 +130,8 @@
   margin: 0 1.5em 0 0;
   padding: 1em 2em;
 }
-#fontsampler-admin label {
+#fontsampler-admin fieldset label,
+#fontsampler-admin label.fontsampler-admin-label-block {
   display: block;
   color: #666;
   margin: 1em 0;
@@ -354,42 +356,105 @@
 #fontsampler-admin #fontsampler-options-checkboxes.use-defaults {
   display: none;
 }
+#fontsampler-admin .fontsampler-admin-column-wrapper {
+  clear: both;
+  overflow: auto;
+}
 #fontsampler-admin .fontsampler-admin-column-half {
   float: left;
   margin-right: 5%;
   width: 45%;
 }
-#fontsampler-admin ul.fontsampler-ui-preview-list {
-  border: 1px dotted #ccc;
-  background: #fff;
-  min-height: 4em;
-  margin: 5px 0;
-  padding: 5px 0;
-  width: 50em;
-}
-#fontsampler-admin ul.fontsampler-ui-preview-list li {
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  background: #eee;
-  cursor: pointer;
-  float: left;
-  padding: 5px 10px;
-  text-align: center;
-  margin-right: 1.5%;
-  margin-left: 1.5%;
-  width: 30%;
+#fontsampler-admin #fontsampler-admin-ui-wrapper {
   position: relative;
-  min-height: 4em;
 }
-#fontsampler-admin ul.fontsampler-ui-preview-list li.fontsampler-ui-placeholder-full {
-  width: 97%;
+#fontsampler-admin #fontsampler-admin-ui-wrapper:hover .fontsampler-ui-block {
+  outline: 1px dotted orange;
 }
-#fontsampler-admin ul.fontsampler-ui-preview-list .ui-state-highlight {
-  background: transparent;
-  border: 1px dotted orange;
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-blocks-list {
+  display: none;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview {
+  border: 1px dotted grey;
+  padding: 10px;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface {
+  position: relative;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block {
+  position: relative;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block.fontsampler-ui-block-fontsampler .fontsampler-ui-block-layout {
+  display: none !important;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block .fontsampler-ui-block-overlay {
+  display: none;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block .fontsampler-ui-block-overlay .fontsampler-ui-block-layout div {
+  opacity: 0;
+  display: none;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block .fontsampler-ui-block-overlay .fontsampler-ui-block-layout div label {
+  display: block;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block:hover {
+  cursor: move !important;
+  outline: 1px solid orange;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block:hover .fontsampler-ui-block-overlay {
+  background: rgba(255, 155, 0, 0.9);
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 19;
+  box-sizing: border-box;
+  padding: 10px;
+  opacity: 1;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block:hover .fontsampler-ui-block-overlay .fontsampler-ui-block-layout {
+  position: absolute;
+  z-index: 29;
+  right: 0;
+  background: lightyellow;
+  top: 31px;
+  min-width: 8em;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block:hover .fontsampler-ui-block-overlay .fontsampler-ui-block-layout:hover div {
+  display: block;
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block:hover .fontsampler-ui-block-overlay .fontsampler-ui-block-layout button.fontsampler-ui-block-layout-open {
+  position: absolute;
+  top: -31px;
+  right: 1px;
+  height: 30px;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block:hover .fontsampler-ui-block-overlay .fontsampler-ui-block-layout div {
+  outline: 1px solid orange;
+  padding: 10px;
+  display: none;
+  opacity: 0;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block:hover .fontsampler-ui-block-overlay .fontsampler-ui-block-layout div label {
+  display: block;
+  margin: 0.5em 0;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview-options {
+  clear: both;
+  display: block;
+}
+#fontsampler-admin #fontsampler-admin-ui-wrapper .type-tester__slider {
+  margin-top: 4px;
 }
 #fontsampler-admin ul.fontsampler-ui-preview-placeholder li {
   display: none;
+}
+#fontsampler-admin .selectric .button {
+  border: none;
 }
 #fontsampler-admin #fontsampler-fontset-from {
   max-width: 50em;
