added buy and specimen default images to settings

--- a/admin/css/admin-settings.less
+++ b/admin/css/admin-settings.less
@@ -42,4 +42,23 @@
             width: 15em;
         }
     }
+
+
+    .fontsampler-setting-image {
+        .fontsampler-upload-wrapper {
+            display: inline-block;
+            width: 10em;
+
+            .custom-img-container {
+                max-width: 100%;
+                max-height: 30px;
+                position: relative;
+
+                img {
+                    display: block;
+                    max-height: 30px;
+                }
+            }
+        }
+    }
 }
