--- a/css/fontsampler-css.css
+++ b/css/fontsampler-css.css
@@ -385,12 +385,17 @@
 }
 .fontsampler-wrapper .fontsampler-interface .fontsampler-ui-block-buy a,
 .fontsampler-wrapper .fontsampler-interface .fontsampler-ui-block-specimen a {
-  border: 0;
-  border-bottom: 1px solid #333;
   box-shadow: none;
-  display: block;
+  display: inline-block;
   height: 100%;
+  width: auto;
   text-decoration: none !Important;
+}
+.fontsampler-wrapper .fontsampler-interface .fontsampler-ui-block-buy a img,
+.fontsampler-wrapper .fontsampler-interface .fontsampler-ui-block-specimen a img {
+  display: block;
+  max-height: 30px;
+  width: auto;
 }
 .fontsampler-wrapper .fontsampler-interface .fontsampler,
 .fontsampler-wrapper .fontsampler-interface .type-tester__content {
@@ -494,7 +499,9 @@
 .fontsampler-interface .selectric .button,
 .fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect > button,
 .fontsampler-interface .rangeslider__fill,
-.fontsampler-ui-block-fontpicker .fontsampler-font-label label {
+.fontsampler-ui-block-fontpicker .fontsampler-font-label label,
+.fontsampler-ui-block-buy a,
+.fontsampler-ui-block-specimen a {
     border-bottom: 1px solid #f70c0c;
 }
 .fontsampler-interface .fontsampler-opentype-features {
