refactored css generation to recompile less file instead of replacing values into a template

--- a/css/fontsampler-custom-selectric.less
+++ b/css/fontsampler-custom-selectric.less
@@ -63,7 +63,7 @@
   height: @buttonSize;
   color: @buttonColor;
   text-align: center;
-  font: 0/0 a;
+  //font: 0/0 a;
   *font: @buttonSize/@buttonSize Lucida Sans Unicode, Arial Unicode MS, Arial;
 }
 .selectric .button:after {
@@ -136,7 +136,7 @@
   height: 1px !important;
   outline: none !important;
   border: none !important;
-  *font: 0/0 a !important;
+  //*font: 0/0 a !important;
   background: none !important;
 }
 
