--- a/css/fontsampler-custom-selectric.less
+++ b/css/fontsampler-custom-selectric.less
@@ -67,6 +67,7 @@
   *font: @buttonSize/@buttonSize Lucida Sans Unicode, Arial Unicode MS, Arial;
 }
 .selectric .button:after {
+  /*
   content: " ";
   position: absolute;
   top: 0;
@@ -79,6 +80,7 @@
   border: 4px solid transparent;
   border-top-color: @buttonColor;
   border-bottom: none;
+  */
 }
 
 .selectric-hover .selectric {
