--- a/css/fontsampler-custom-selectric.css
+++ b/css/fontsampler-custom-selectric.css
@@ -43,6 +43,7 @@
   *font: 1px Lucida Sans Unicode, Arial Unicode MS, Arial;
 }
 .selectric .button:after {
+  /*
   content: " ";
   position: absolute;
   top: 0;
@@ -53,8 +54,9 @@
   width: 0;
   height: 0;
   border: 4px solid transparent;
-  border-top-color: #333333;
+  border-top-color: @buttonColor;
   border-bottom: none;
+  */
 }
 .selectric-hover .selectric {
   border-color: #333333;
