fixed non-line-height feature text line height default, removed redundant ui_order checks from Helpers

--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -49,7 +49,7 @@
         .fontsampler-ui-block {
             box-sizing: border-box;
             float: left;
-            line-height: 1em;
+            line-height: 1.2;
 
             &.fontsampler-ui-block-fontsampler {
                 height: auto;
