added 4 column possibility

--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -41,6 +41,10 @@
             .blocks(3);
         }
 
+        &.columns-4 {
+            .blocks(4);
+        }
+
         @media screen and (max-width: 768px) {
             .blocks(1) !important;
         }
